# BorlanStationAlpha

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
resource/: enemies.txt  items.txt  player.txt  various.txt
src/: array2.h  blueprint.cpp  blueprint.h  cell.cpp  cell.h  color.h  components.h  ecs.h  format.h  inventory.cpp  main.cpp  map.cpp  map.h  mapgen.cpp  mapgen.h  messagelog.cpp  messagelog.h  name.cpp  name.h  random.cpp  random.h  roll.cpp  roll.h  serialize.cpp  serialize.h  traceline.h  vector2.h
src/action/: attack.cpp  attack.h  move.cpp  move.h
src/ecs/: engine.h  entity.h  entitybase.h  storage.h  system.h  typeid.h
src/frontend/: console.cpp  frontend.cpp  frontend.h  sdl.cpp
src/system/: ai.cpp  ai.h  door.cpp  door.h  health.cpp  health.h  oxygen.cpp  oxygen.h  vacuum.cpp  vacuum.h  vision.cpp  vision.h
src/view/: hud.cpp  hud.h  map.cpp  map.h  menu.cpp  menu.h  selectposition.cpp  selectposition.h  view.cpp  view.h
